--- a/app/tooltip.css
+++ b/app/tooltip.css
@@ -75,7 +75,7 @@
   top: -4px;
   left: 36px; 
   font-weight: 200;  
-  font-family: Roboto, Arial, sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 14px;
   color: #eee;
   line-height: 22px;  
