--- a/doc/booklet.css
+++ b/doc/booklet.css
@@ -58,12 +58,18 @@
     background: transparent;
     color: silver;
     font-size: 1.6em;
-    padding: 0;    
+    padding: 0; 
+    margin-right: 0px;
+    /* margin-left: 1rem; */
+    /* padding-left: 1rem;    */
 }
 .close-button.close-booklet>div:hover{            
     color: #eee;
     cursor: default;    
     background-color: 	cadetblue;
+    margin-right: 0px;
+    /* margin-left: 1rem; */
+    /*    */
 }
 /***********************************
      front page - booklet closed                            
@@ -84,11 +90,14 @@
 }
 #booklet .booklet-closed .front-page-header-text  {
     color: teal; 
-    display: block;    
+    display: block;     
 }
 #booklet .booklet-closed .front-page-title{     
     color: teal;
-    border-bottom: 2px solid teal; 
+    border-bottom: 2px solid rgb(0, 128, 128); 
+    /* opacity: 0.8; */
+    /* border-bottom: 2px solid teal; */
+    /* font-weight: 500;  */
     font-weight: 500; 
 }
 #booklet .front-page.booklet-closed  a,
@@ -96,7 +105,7 @@
     padding: 0.2rem 0.3rem 0.3rem  0.3rem;
     margin-left: 0.3rem;
     color: teal;
-    background: none;
+    background: none;    
 }
 #booklet .booklet-closed a:hover,
 #booklet .booklet-closed .dropdown-bt:hover{    
@@ -137,6 +146,9 @@
     display:flex;
     flex-direction: row;
     justify-content: space-between; 
+    /* justify-content: flex-end;  */
+    /* border-bottom: 1px solid #54585A; */
+    /* border-bottom: 1px solid teal;      */      
     align-items: center;   
     position: -webkit-sticky;
     position: sticky;
@@ -164,10 +176,10 @@
 #booklet .front-page-header-text{    
     padding-left: 1rem;
     margin:0;
-    line-height: 1.9rem;    
+    line-height: 1.9rem;
     font-size: 0.9rem; 
-    font-family: 'Bookman Old Style', Georgia, Roboto, 'Lilita One', Raleway,'Abril Fatface', sans-serif;
-    font-weight: 700;                 
+    font-family: 'Lilita One', sans-serif;
+    font-weight: 500;
     color: #54585A;
     z-index: 2;  
     display: none;   
@@ -176,17 +188,17 @@
     border-bottom: 1px solid #54585A;
     margin: 0 1rem 1rem 1rem;
     padding: 0; 
-    font-family: Roboto, Georgia, 'Bookman Old Style', serif;
+    font-family: Roboto, sans-serif;    
     font-size: 1.2rem;
     font-weight: 500;    
-    color: #54585A; 
+    color: #54585A;    
     text-align: center;   
 }
 #booklet .front-page a,
 #booklet .dropdown-bt { 
     padding: 0.2rem 0.3rem 0.3rem 1.6rem;     
     text-decoration: none;
-    font-family: Roboto, 'Roboto Condensed', Georgia, 'Bookman Old Style', serif;   
+    font-family: Roboto, sans-serif;   
     font-size: 0.9rem !important; 
     line-height: 1rem;  
     font-weight: 500;    
@@ -337,7 +349,7 @@
 .regular-page h4,
 .regular-page h5,
 .regular-page h6 {
-    font-family: Georgia, serif;
+    font-family: 'Roboto Slab', sans-serif;
     font-weight: 600;    
     margin: 0.6rem 0px 0.4rem 0px;
     padding-left: 1.4rem;    
@@ -353,7 +365,7 @@
     line-height: 1.4em; 
     margin: 0;
     padding-left: 0.2rem;
-    font-family: Georgia, Roboto, 'Roboto Condensed', 'Bookman Old Style', serif;
+    font-family: 'Roboto Slab', sans-serif;
     font-weight: 600; 
     font-size: 0.9rem !important;   
 } 
@@ -365,7 +377,7 @@
 .regular-page a { 
     padding: 0.2rem 1rem 0 0.2rem;       
     text-decoration: none;
-    font-family: Georgia, Roboto, 'Roboto Condensed', 'Bookman Old Style', serif;  
+    font-family: 'Roboto Slab', sans-serif;  
     font-size: 1rem !important; 
     line-height: 1rem;
     font-weight: 600; 
@@ -461,4 +473,7 @@ fieldset {
 }
 .vertical-separator.visible {
     display: block;
+}
+.example h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
 }
