--- a/app/table.css
+++ b/app/table.css
@@ -239,7 +239,7 @@
   min-width: 116px;  
   z-index: 1;  
   margin-left: 0.4rem;
-  border-radius: 4px;
+  border-radius: 4px;  
   border: 1px solid lightblue; 
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
@@ -298,6 +298,7 @@
   }  
   .cell-odd {
     background:#ecf0f1; 
+    /* background:#ecf0f1; */
   }    
   .flex-container {
     display: flex;      
