--- a/app/input_SearchTable.css
+++ b/app/input_SearchTable.css
@@ -1,9 +1,10 @@
-.input-searchTable{  
-  width: 45%;
+.input-searchTable{ 
+  width: 30%;
   max-width: 20rem;
+  white-space: nowrap;
 }
 .input-searchTable .fa {
-  margin: auto -30px;
+  margin: auto -32px;
 }
 .input-searchTable .fa-search {
   color: teal;
@@ -22,8 +23,8 @@
   min-width: 120px;
   min-height: 24px;  
   font-size: 1.1rem;
-  margin: 0 0;  
-  padding: 2px 0 2px 12px;
+  margin: 0 0;
+  padding: 2px 0 2px 24px;
   width: 100%;
   background: #ecf0f1;
   border: 1px solid #ccc;
@@ -42,5 +43,7 @@
     color: #095484;
     background-color: #F7F7F7;    
 }
+
+
 
 
