--- a/doc/booklet.css
+++ b/doc/booklet.css
@@ -478,8 +478,8 @@ fieldset {
     font-weight: 700;
 }
 
-.w3-container {
-    /* padding: 0.01em 16px; */
+/* doc get_colors */
+.w3-container {    
     padding: 0.6em 1em;
     margin: 0 1em;
     max-width: 600px;;
